# sigaw

./: .gitignore  LICENSE  README.md  layer-gl.map  layer.map  meson.build  sigaw.conf.example
.forgejo/workflows/: nightly.yml  release.yml  test.yml
contrib/: sigaw-daemon.service  sigaw-daemon.service.in
contrib/ci/: bootstrap-deps.sh  build-test-install.sh  common.sh  package-artifacts.sh  publish-forgejo-release.sh
layer-manifest/: VK_LAYER_MACCO_sigaw.x86_64.json  VK_LAYER_MACCO_sigaw.x86_64.json.in
src/common/: config.h  config_watcher.h  overlay_frame_shm.h  protocol.h
src/ctl/: main.cpp
src/daemon/: avatar_cache.h  chat_runtime.h  control_server.h  discord_ipc.h  json_utils.h  main.cpp  shm_writer.h  tray_actions.cpp  tray_actions.h  tray_icon.cpp  tray_icon.h  voice_runtime.h
src/layer/: font.h  layer_entry.c  overlay_animation.h  overlay_gl.cpp  overlay_layout.h  overlay_preview.h  overlay_renderer.cpp  overlay_runtime.h  overlay_visibility.h  shm_reader.h  swapchain_bookkeeping.h  vk_dispatch.h  wine_policy.h
src/layer/shaders/: overlay_quad.frag  overlay_quad.vert
src/run/: launcher_env.cpp  launcher_env.h  main.cpp
src/tools/: render_screenshots.cpp
tests/: config_parse_test.cpp  config_watcher_test.cpp  daemon_voice_runtime_test.cpp  json_utils_test.cpp  launcher_env_test.cpp  layer_artifact_test.sh  layer_present_test.c  layer_runtime_test.cpp  overlay_animation_test.cpp  overlay_frame_metadata_test.cpp  overlay_layout_test.cpp  overlay_panel_test.cpp  overlay_runtime_prepare_test.cpp  overlay_visibility_test.cpp  shm_reader_test.cpp  swapchain_bookkeeping_test.cpp  tray_actions_test.cpp
www/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
www/src/layouts/: Layout.astro
www/src/pages/: index.astro
